--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
+<!-- <div>
+  <app-navbar></app-navbar>
+
+  <app-information></app-information>
+  <app-party></app-party>
+</div> -->
 <router-outlet></router-outlet>
