--- a/src/app/day/day.component.html
+++ b/src/app/day/day.component.html
@@ -1,1 +1,6 @@
-<p>day works!</p>
+<div id="day" class="FullScreen">
+  <div class="row">
+    <div class="col-sm">One of three columns</div>
+    <div class="col-sm">One of three columns</div>
+  </div>
+</div>
