--- a/src/app/honnor/honnor.component.html
+++ b/src/app/honnor/honnor.component.html
@@ -1,1 +1,6 @@
-<p>honnor works!</p>
+<div id="honnor" class="FullScreen">
+  <div class="row">
+    <div class="col-sm">IM HONOR</div>
+    <div class="col-sm">IM HONOR</div>
+  </div>
+</div>
