--- a/src/app/pictures/pictures.component.html
+++ b/src/app/pictures/pictures.component.html
@@ -1,1 +1,6 @@
-<p>pictures works!</p>
+<div id="pictures" class="FullScreen">
+  <div class="row">
+    <div class="col-sm">IM PICTURES</div>
+    <div class="col-sm">IM PICTURES</div>
+  </div>
+</div>
