--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,4 +1,1 @@
-<div class="FullScreen" id="Hbackground">
-  <p>homepage works!</p>
-  <app-home></app-home>
-</div>
+<div id="Hbackground" class="FullScreen">.</div>
