--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,6 +6,9 @@ font-family: 'Great Vibes', cursive;
 font-family: 'Major Mono Display', monospace;
 font-family: 'Pacifico', cursive;
 */
+#Hbackground {
+  background-image: url("../../app/images/Nous1.jpg");
+}
 
 /*Desktop*/
 
