--- a/src/app/information/information.component.html
+++ b/src/app/information/information.component.html
@@ -32,8 +32,13 @@
           ></iframe>
         </div>
       </div>
-      <div class="col-12 order-sm-3">
-        <h1>Connectez vous</h1>
+      <div class="mt-5 col-12 order-sm-3">
+        <h2 class="mb-5">Connectez vous</h2>
+        <p>
+          Pour voir le contenu lié à votre invitation , nous vous invitons à
+          vous connectez.
+        </p>
+        <p class="mb-5">pas de panique , tout y sera expliqué</p>
         <app-modal-login></app-modal-login>
       </div>
     </div>
