--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -15,13 +15,7 @@
     <p>
       <mat-form-field appearance="outline">
         <mat-label>Prenom</mat-label>
-        <input
-          autocomplete="off"
-          formControlName="prenom"
-          type="text"
-          matInput
-          placeholder="Prenom "
-        />
+        <input formControlName="prenom" matInput placeholder="cathy" />
       </mat-form-field>
     </p>
     <p>
