--- a/src/app/modal-login/modal-login.component.html
+++ b/src/app/modal-login/modal-login.component.html
@@ -1,88 +1,92 @@
-<ng-template #content let-modal>
-  <div class="modal-header">
-    <h4 class="modal-title">Connectez vous</h4>
-    <button
-      type="button"
-      class="close"
-      aria-label="Close"
-      (click)="modal.dismiss('Cross click')"
+<div class="size">
+  <ng-template id="modal" class="modal-content" #content let-modal>
+    <div
+      id="modal-header"
+      class="modal-header text-center justify-content-center"
     >
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body">
-    <mat-card>
-      <form [formGroup]="loginForm" (ngSubmit)="loginUser()" type="">
-        <p>
-          <mat-form-field appearance="outline">
-            <mat-label>Email</mat-label>
-            <input
-              autocomplete="off"
-              formControlName="email"
-              type="email"
-              matInput
-              placeholder="Email"
-            />
-          </mat-form-field>
-        </p>
-        <p>
-          <mat-form-field appearance="outline">
-            <mat-label>Password</mat-label>
-            <input
-              autocomplete="off"
-              formControlName="password"
-              type="password"
-              matInput
-              placeholder="Password"
-            />
-          </mat-form-field>
-        </p>
-        <div *ngIf="firebaseErrorMessage != ''" class="error-style">
-          <span>{{ firebaseErrorMessage }}</span>
-        </div>
+      <button
+        type="button"
+        class="close text-danger"
+        aria-label="Close"
+        (click)="modal.dismiss('Cross click')"
+      >
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <mat-card class="card">
+        <form [formGroup]="loginForm" (ngSubmit)="loginUser()" type="">
+          <h3>Pour vous connectez rien de plus simple :</h3>
+          <mat-tab-group color="accent" mat-align-tabs="start">
+            <mat-tab label="Email">
+              - L'email que vous nous avez renseigné dans les différents
+              formulaires</mat-tab
+            >
+            <mat-tab label="Mot de passe">
+              - Votre nom + prenom en minuscule sans apostrophe , sans tiret
+            </mat-tab>
+          </mat-tab-group>
 
-        <button mat-raised-button color="primary">Login</button>
-      </form>
-    </mat-card>
-  </div>
-  <div class="modal-footer">
-    <button
-      type="button"
-      class="btn btn-light"
-      (click)="modal.close('Close click')"
-    >
-      Close
-    </button>
-  </div>
-</ng-template>
-
-<ng-template #longContent let-modal>
-  <div class="modal-header">
-    <h4 class="modal-title">Modal title</h4>
-    <button
-      type="button"
-      class="close"
-      aria-label="Close"
-      (click)="modal.dismiss('Cross click')"
-    >
-      <span aria-hidden="true">&times;</span>
-    </button>
-  </div>
-  <div class="modal-body"></div>
-  <div class="modal-footer">
-    <button
-      type="button"
-      class="btn btn-light"
-      (click)="modal.close('Close click')"
-    >
-      Close
-    </button>
-  </div>
-</ng-template>
+          <p class="mt-5">
+            <mat-form-field class="full-width" appearance="outline">
+              <mat-label>Email</mat-label>
+              <input
+                autocomplete="off"
+                formControlName="email"
+                type="email"
+                matInput
+                placeholder="Email"
+              />
+            </mat-form-field>
+          </p>
+          <p>
+            <mat-form-field class="full-width" appearance="outline">
+              <mat-label>Password</mat-label>
+              <input
+                autocomplete="off"
+                formControlName="password"
+                type="password"
+                matInput
+                placeholder="Password"
+              />
+            </mat-form-field>
+          </p>
+          <div *ngIf="firebaseErrorMessage != ''" class="error-style">
+            <span>{{ firebaseErrorMessage }}</span>
+          </div>
+          <div
+            class="modal-footer text-center justify-content-around align-items-center pb-0"
+          >
+            <button
+              class="mt-3 mb-0"
+              mat-raised-button
+              id="connexion"
+              (click)="
+                modal.close('close click');
+                openSnackBar('vous etes connecté(e)s', 'close')
+              "
+            >
+              Connectez vous
+            </button>
+            <!--  <button
+            id="closebutton"
+            type="button"
+            class="btn btn-light"
+            (click)="modal.close('Close click')"
+          >
+            je n'ai pas de nom
+          </button> -->
+          </div>
+        </form>
+      </mat-card>
+    </div>
+  </ng-template>
+</div>
 
 <button
+  id="connexion"
   class="btn btn-outline-primary mb-2 mr-2"
-  (click)="openVerticallyCentered(content)"
+  (click)="openBackDropCustomClass(content)"
 >
-  Modal vertically centered
+  Connectez vous !
 </button>
