--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -14,6 +14,7 @@ font-family: 'Pacifico', cursive;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
+  background-image: url("../../app/images/Nous1.jpg");
 }
 
 #Obackground {
