--- a/src/app/information/information.component.html
+++ b/src/app/information/information.component.html
@@ -6,27 +6,35 @@
       <h1>information</h1>
       <!-- coupe le coté gauche en deux -->
       <div class="row text-center justify-content-center">
-        <div
-          class="leftdate col-sm-5 order-sm-1 text-center justify-content-center"
-        >
-          <h2 mb-5>date :</h2>
-          <p id="date">13. 08. 2022</p>
-          <div class="mt-5" id="timer">
+        <div class="leftdate col-sm-5 order-sm-1 text-center">
+          <div class="mb-5">
+            <h2 class="mb-5 mt-3">date :</h2>
+            <p id="date">13. 08. 2022</p>
+          </div>
+
+          <div class="mt-2" id="timer">
             <h2>time left :</h2>
-            <span id="days"></span>days <span id="hours"></span>hours
-            <span id="minutes"></span>minutes <span id="seconds"></span>seconds
+            <span id="days"></span>days <br /><br /><span id="hours"></span
+            >hours <br />
+            <br />
+            <span id="minutes"></span>minutes <br />
+            <br />
+            <span id="seconds"></span>seconds
           </div>
         </div>
         <div
           class="rightposition col-sm-5 order-sm-1 text-center justify-content-center"
         >
-          <h2 class="my-auto">lieu :</h2>
-          <p class="mb-3">Rue de walibi n°35 ,1050 ixelles .</p>
+          <div class="">
+            <h2 class="mb-5 mt-3">lieu :</h2>
+            <p class="mb-3">Rue de walibi n°35 ,1050 ixelles .</p>
+          </div>
+
           <iframe
+            class="youtube"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5053.655420408953!2d4.589849179427408!3d50.70458166804516!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c17d8aec109b59%3A0xec0b5286181703eb!2sWalibi%20Belgium!5e0!3m2!1sfr!2sbe!4v1643298250302!5m2!1sfr!2sbe"
             width="90%"
-            height="90%"
-            style="border: 0"
+            height="60%"
             allowfullscreen=""
             loading="lazy"
           ></iframe>
