--- a/src/app/modal-login/modal-login.component.html
+++ b/src/app/modal-login/modal-login.component.html
@@ -1,5 +1,5 @@
 <div class="size">
-  <ng-template id="modal" class="modal-content" #content let-modal>
+  <ng-template class="modal-content" #content let-modal>
     <div
       id="modal-header"
       class="modal-header text-center justify-content-center"
@@ -23,7 +23,7 @@
               formulaires</mat-tab
             >
             <mat-tab label="Mot de passe">
-              - Votre nom + prenom en minuscule sans apostrophe , sans tiret
+              - Votre nom + prenom en minuscule sans apostrophe , ni tiret
             </mat-tab>
           </mat-tab-group>
 
@@ -43,6 +43,7 @@
             <mat-form-field class="full-width" appearance="outline">
               <mat-label>Password</mat-label>
               <input
+                class="fieldpassword"
                 autocomplete="off"
                 formControlName="password"
                 type="password"
@@ -51,9 +52,9 @@
               />
             </mat-form-field>
           </p>
-          <div *ngIf="firebaseErrorMessage != ''" class="error-style">
+          <!--    <div *ngIf="firebaseErrorMessage != ''" class="error-style">
             <span>{{ firebaseErrorMessage }}</span>
-          </div>
+          </div> -->
           <div
             class="modal-footer text-center justify-content-around align-items-center pb-0"
           >
@@ -61,10 +62,7 @@
               class="mt-3 mb-0"
               mat-raised-button
               id="connexion"
-              (click)="
-                modal.close('close click');
-                openSnackBar('vous etes connecté(e)s', 'close')
-              "
+              (click)="modal.close('close click')"
             >
               Connectez vous
             </button>
