--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,13 @@
 <!-- <div>
+  <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" />
   <app-navbar></app-navbar>
 
   <app-information></app-information>
   <app-party></app-party>
 </div> -->
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+/>
 <router-outlet></router-outlet>
