--- a/src/app/honnor/honnor.component.html
+++ b/src/app/honnor/honnor.component.html
@@ -1,6 +1,6 @@
 <div id="honnor" class="FullScreen">
   <div class="row">
     <div class="col-sm">IM HONOR</div>
-    <div class="col-sm">IM HONOR</div>
+    <div class="col-sm">IM HONOR 2</div>
   </div>
 </div>
