--- a/src/app/day/day.component.html
+++ b/src/app/day/day.component.html
@@ -6,24 +6,26 @@
     <div
       class="col-sm-8 order-lg-2 order-sm-1 FullScreenleft text-center justify-content-center"
     >
-      <h1>Déroulement de la journée</h1>
+      <h1>Déroulement de votre journée</h1>
       <h2>cliquez pour plus d'information</h2>
       <ul class="timeline mr-4 ml-4">
         <li
           class="timeline"
-          ngbPopover="You see, I show up on hover!"
-          triggers="mouseenter:mouseleave"
-          popoverTitle="Pop title"
-          placement="left"
+          *ngIf="(afAuth.user | async) && (user | async)?.accountType <= 3"
         >
-          <div class="icon done"><i class="fas fa-home"></i></div>
+          <div class="icon done">
+            <i class="fas fa-home"></i>
+          </div>
           <details class="panel">
             <summary>Le Rendez-vous : 9h00</summary>
             <p>Rendez vous pour les proches .</p>
           </details>
         </li>
 
-        <li class="timeline">
+        <li
+          class="timeline"
+          *ngIf="(afAuth.user | async) && (user | async)?.accountType <= 3"
+        >
           <div class="icon done"><i class="fas fa-ring"></i></div>
           <details class="panel">
             <summary>La commune : 11h00</summary>
@@ -31,7 +33,10 @@
           </details>
         </li>
 
-        <li class="timeline">
+        <li
+          class="timeline"
+          *ngIf="(afAuth.user | async) && (user | async)?.accountType <= 3"
+        >
           <div class="icon done"><i class="fas fa-church"></i></div>
           <details class="panel">
             <summary>L'église : 12h00</summary>
@@ -39,7 +44,10 @@
           </details>
         </li>
 
-        <li class="timeline">
+        <li
+          class="timeline"
+          *ngIf="(afAuth.user | async) && (user | async)?.accountType <= 4"
+        >
           <div class="icon"><i class="fas fa-wine-glass-alt"></i></div>
           <details class="panel">
             <summary>Le Vin d'honneur : 14h00</summary>
@@ -50,7 +58,10 @@
           </details>
         </li>
 
-        <li class="timeline">
+        <li
+          class="timeline"
+          *ngIf="(afAuth.user | async) && (user | async)?.accountType <= 4"
+        >
           <div class="icon"><i class="fas fa-utensils"></i></div>
           <details class="panel">
             <summary>Le Repas : 15h00</summary>
