--- a/src/app/day/day.component.html
+++ b/src/app/day/day.component.html
@@ -1,10 +1,11 @@
 <div id="day" class="FullScreen">
   <div class="row">
     <div
-      class="col-sm-4 order-lg-1 order-sm-2 FullScreenright text-center justify-content-center"
+      id="FullScreenright"
+      class="col-lg-4 col-md-12 col-sm-10 order-2 order-md-2 order-lg-1 FullScreenright text-center justify-content-center"
     ></div>
     <div
-      class="col-sm-8 order-lg-2 order-sm-1 FullScreenleft text-center justify-content-center"
+      class="col-lg-8 col-md-12 col-sm-10 order-1 order-md-1 order-lg-2 FullScreenleft text-center justify-content-center"
     >
       <h1>Déroulement de votre journée</h1>
       <h2>cliquez pour plus d'information</h2>
