--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -39,7 +39,7 @@
         <a
           class="nav-link mr-3 ml-3"
           *ngIf="(afAuth.user | async) && (user | async)?.accountType <= 5"
-          >Soirée</a
+          >IceBreaker</a
         >
       </li>
 
