--- a/src/app/party/party.component.html
+++ b/src/app/party/party.component.html
@@ -18,6 +18,8 @@
 >
   <div class="row">
     <div class="col-sm-6 order-sm-1 bg-danger FullScreenright">IM PARTY</div>
-    <div class="col-sm-6 order-sm-1 FullScreenleft">IM PARTY</div>
+    <div class="col-sm-6 order-sm-1 FullScreenleft">
+      <app-uploadmanager></app-uploadmanager>
+    </div>
   </div>
 </div>
