--- a/src/app/pictures/pictures.component.html
+++ b/src/app/pictures/pictures.component.html
@@ -1,6 +1,6 @@
 <div id="pictures" class="FullScreen">
   <div id="toit" class="row justify-center justify-content-center">
-    <div id="photo" class="col-8">
+    <div id="photo" class="col-8 col-sm-12 col-md-12">
       <ngb-carousel
         #carousel
         [interval]="5000"
