--- a/src/app/information/information.component.scss
+++ b/src/app/information/information.component.scss
@@ -20,10 +20,8 @@ h2 {
 
 /* la date en gros  */
 #date {
-  padding-top: 0;
-  margin-top: 0;
   font-weight: 500;
-  font-size: 2vw;
+  font-size: 1.8rem;
 }
 
 p {
