--- a/src/app/party/party.component.html
+++ b/src/app/party/party.component.html
@@ -17,9 +17,16 @@
   *ngIf="(afAuth.user | async) && (user | async)?.accountType <= 5"
 >
   <div class="row">
-    <div class="col-sm-6 order-sm-1 bg-danger FullScreenright">IM PARTY</div>
-    <div class="col-sm-6 order-sm-1 FullScreenleft">
+    <div
+      class="col-lg-8 col-md-12 col-sm-10 order-1 order-md-1 order-lg-1 bg-danger FullScreenright"
+    >
       <app-uploadmanager></app-uploadmanager>
+      <app-icebreakinsideparty></app-icebreakinsideparty>
+    </div>
+    <div
+      class="col-lg-4 col-md-12 col-sm-10 order-2 order-md-2 order-lg-2 FullScreenleft"
+    >
+      party pictures
     </div>
   </div>
 </div>
